docs(deployment): 更新部署说明和添加PWA及SEO支持文档
- 修正GitHub仓库地址
- 详细补充使用Wrangler CLI部署到Cloudflare Workers步骤
- 新增PWA支持的添加到主屏幕操作说明（iOS Safari和Android Chrome）
- 添加SEO优化最佳实践和优势说明
- 更新性能优化和移动端支持内容
- 增补自定义域名配置示例
- 更新Cache-Control及安全策略相关HTTP头配置
- 删除演示页面和多余静态资源文件
- 移除主应用HTML及JS源码文件，简化项目结构说明

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,4 @@
 name = "gold-price-converter"
 compatibility_date = "2024-01-01"
 
-[env.production]
-name = "gold-price-converter"
-
-[[pages_builds]]
-command = "npm run build"
-cwd = "."
-watch_dir = "src"
+[pages]
