--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "gold-price-converter",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "黄金价格换算器 - 美元/盎司转人民币/克",
-  "main": "index.html",
+  "main": "src/index.html",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite src",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-icons": "node src/utils/scripts/generate-icons.js",
+    "deploy": "npm run build && npx wrangler pages deploy dist",
+    "cf-typegen": "npx wrangler types"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "svg2png": "^4.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
     "terser": "^5.44.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "wrangler": "^3.0.0"
   },
   "keywords": [
     "gold",
@@ -22,8 +29,11 @@
     "currency",
     "黄金",
     "价格",
-    "换算"
+    "换算",
+    "金价",
+    "贵金属",
+    "投资"
   ],
-  "author": "Gold Price Converter",
+  "author": "lg8294",
   "license": "MIT"
 }
