chore(deps): 更新依赖包版本至1.1.1
- 升级项目版本号从1.0.0到1.1.1
- 添加axios和svg2png为项目依赖
- 更新并添加多个Babel相关开发依赖（如@babel/core、@babel/preset-env等）
- 集成Vite和Wrangler作为开发工具依赖
- 同步更新大量Babel插件和辅助包到最新版本
- 确保所有依赖包的license、engines配置以及peerDependencies正确配置

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "黄金价格换算器 - 美元/盎司转人民币/克",
   "main": "src/index.html",
   "scripts": {
-    "dev": "vite src",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "generate-icons": "node src/utils/scripts/generate-icons.js",
